# gus

./: Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml  release.yml
src/: cli.rs  config.rs  git.rs  main.rs
